--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.9",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
+    "three": "^0.153.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
