--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
@@ -26,9 +27,11 @@
     "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
+    "typed.js": "^2.0.16",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "@types/three": "^0.152.1"
   }
 }
