--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.4",
+    "@mui/icons-material": "^5.11.16",
     "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.13.3",
     "@types/node": "20.3.1",
@@ -18,12 +20,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "flowbite": "^1.6.6",
-    "flowbite-react": "^0.4.9",
+    "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
