--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.4",
     "@mui/icons-material": "^5.11.16",
     "@react-three/drei": "^9.77.3",
@@ -22,6 +23,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
+    "next-navigation": "^1.0.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
