--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.6",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.1.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.6.0",
     "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0",
