--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
-  "name": "portofolio-pandu-2023",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.0.4",
-    "@mui/icons-material": "^5.11.16",
-    "@react-three/drei": "^9.77.3",
-    "@react-three/fiber": "^8.13.3",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "aos": "^2.3.4",
-    "autoprefixer": "10.4.14",
-    "clsx": "^2.1.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.12.17",
-    "next": "13.4.7",
-    "next-navigation": "^1.0.6",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.6.0",
-    "sass": "^1.63.6",
-    "tailwindcss": "3.3.2",
-    "three": "^0.153.0",
-    "typed.js": "^2.0.16",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.4",
-    "@types/three": "^0.152.1"
-  }
+    "name": "portofolio-pandu-2023",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "type-check": "tsc --noEmit",
+        "analyze": "ANALYZE=true npm run build",
+        "export": "next build && next export"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@material-tailwind/react": "^2.0.4",
+        "@mui/icons-material": "^5.11.16",
+        "@react-three/drei": "^9.77.3",
+        "@react-three/fiber": "^8.13.3",
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "aos": "^2.3.4",
+        "autoprefixer": "10.4.14",
+        "clsx": "^2.1.0",
+        "eslint": "8.43.0",
+        "eslint-config-next": "13.4.7",
+        "framer-motion": "^10.12.17",
+        "next": "13.4.7",
+        "next-navigation": "^1.0.6",
+        "postcss": "8.4.24",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.10.1",
+        "react-intersection-observer": "^9.6.0",
+        "sass": "^1.63.6",
+        "tailwindcss": "3.3.2",
+        "three": "^0.153.0",
+        "typed.js": "^2.0.16",
+        "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "@types/aos": "^3.0.4",
+        "@types/three": "^0.152.1"
+    }
 }
