--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
         "@heroicons/react": "^2.0.18",
         "@material-tailwind/react": "^2.0.4",
         "@mui/icons-material": "^5.11.16",
-        "@react-three/drei": "^9.77.3",
-        "@react-three/fiber": "^8.13.3",
-        "@types/node": "20.3.1",
-        "@types/react": "18.2.14",
-        "@types/react-dom": "18.2.6",
-        "aos": "^2.3.4",
-        "autoprefixer": "10.4.14",
-        "clsx": "^2.1.0",
-        "eslint": "8.43.0",
-        "eslint-config-next": "13.4.7",
-        "framer-motion": "^10.12.17",
-        "next": "13.4.7",
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.5.0",
+        "@tailwindcss/postcss": "^4.1.18",
+        "@types/node": "^25.0.10",
+        "@types/react": "^19.2.9",
+        "@types/react-dom": "^19.2.3",
+        "autoprefixer": "^10.4.23",
+        "clsx": "^2.1.1",
+        "eslint": "^9.39.2",
+        "eslint-config-next": "^16.1.4",
+        "framer-motion": "^12.29.2",
+        "maath": "^0.10.8",
+        "next": "^16.1.4",
         "next-navigation": "^1.0.6",
-        "postcss": "8.4.24",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "postcss": "^8.5.6",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "react-icons": "^4.10.1",
         "react-intersection-observer": "^9.6.0",
         "sass": "^1.63.6",
-        "tailwindcss": "3.3.2",
-        "three": "^0.153.0",
-        "typed.js": "^2.0.16",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss": "^4.1.18",
+        "three": "^0.182.0",
+        "typed.js": "^3.0.0",
         "typescript": "5.1.3"
     },
     "devDependencies": {
-        "@types/aos": "^3.0.4",
         "@types/three": "^0.152.1"
     }
 }
