--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "maath": "^0.10.8",
         "next": "^16.1.4",
         "next-navigation": "^1.0.6",
+        "next-themes": "^0.4.6",
         "postcss": "^8.5.6",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
